Extend tests to cover client's retry mechanism